k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vitrine
  namespace: vitrine
spec:
  selector:
    app: vitrine
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
