k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vitrine
  namespace: vitrine
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik-external
  tls:
    - hosts:
        - vitrine.hraedon.com
      secretName: vitrine-tls
  rules:
    - host: vitrine.hraedon.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vitrine
                port:
                  number: 8080
